--- a/EmpInfo/Views/Apply/CheckALApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckALApply.cshtml
@@ -128,6 +128,10 @@
                         <td>@al.isContinue</td>
                     </tr>
                     <tr>
+                        <th>请假去向</th>
+                        <td>@al.goWhere</td>
+                    </tr>
+                    <tr>
                         <th>请假事由</th>
                         <td>@al.leaveReason</td>
                     </tr>
