--- a/EmpInfo/Views/Apply/CheckDPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckDPApply.cshtml
@@ -345,8 +345,8 @@
                                 <span>@form.charge_fee 元</span>
                             </div>
                         </div>
-                        @*<div>使用配件清单：</div>
-                        <div><table id="tb"></table></div>*@
+                        <div>使用配件清单：</div>
+                        <div><table id="tb"></table></div>
                         <div style="margin-top:6px;">
                             <div class="b-label">修复图片:</div>
                             <div id="attList2"></div>
