--- a/EmpInfo/Views/Home/DormGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/DormGroupIndex.cshtml
@@ -48,7 +48,13 @@
                     <img src="@Url.Content("~/Content/images/repair.png")" alt="repair" class="center-block" />
                     <p class="text-center">宿舍维修申请</p>
                 </a>
-            </div>            
+            </div>          
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=PP")">
+                    <img src="@Url.Content("~/Content/images/pp.png")" alt="file" class="center-block" />
+                    <p class="text-center">后勤公共维修</p>
+                </a>
+            </div>           
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Att/OTHER/dorm_charge_20200501.JPG")" target="_blank">
                     <img src="@Url.Content("~/Content/images/file.png")" alt="file" class="center-block" />
