--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -105,13 +105,18 @@
                     <p class="text-center" data-key="漏刷,多刷,刷卡">考勤补记</p>
                 </a>
             </div>
-            <div class="col-xs-4 col-sm-3 col-md-2">
+            @*<div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=KS")">
                     <img src="@Url.Content("~/Content/images/ks.png")" alt="开源节流建议申请" class="center-block" />
                     <p class="text-center">开源节流建议</p>
                 </a>
+            </div>*@
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=XA")">
+                    <img src="@Url.Content("~/Content/images/xa.png")" alt="项目申请单" class="center-block" />
+                    <p class="text-center">项目申请单</p>
+                </a>
             </div>
-
             <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 物流出货 & K3相关</div>
 
             <div class="col-xs-4 col-sm-3 col-md-2">
