--- a/EmpInfo/Views/Apply/CheckPPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckPPApply.cshtml
@@ -5,7 +5,6 @@
     var itemsJson = JsonConvert.SerializeObject(m.items);
 }
 @section CSS{
-    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />
 
     <style type="text/css">
@@ -99,9 +98,33 @@
             </span>
         </div>
         <div class="b-div">
+            <span class="b-label">
+                申请人:
+            </span>
+            <span class="b-input">
+                @m.bill.applier_name
+            </span>
+        </div>
+        <div class="b-div">
+            <span class="b-label">
+                申请时间:
+            </span>
+            <span class="b-input">
+                @(m.bill.apply_time.ToString("yyyy-MM-dd"))
+            </span>
+        </div>        
+        <div class="b-div">
             <span class="b-label">维修日期:</span>
             <span class="b-input">
                 @(((DateTime)m.bill.repair_day).ToString("yyyy-MM-dd"))
+            </span>
+        </div>
+        <div class="b-div">
+            <span class="b-label">
+                宿舍区:
+            </span>
+            <span class="b-input">
+                @m.bill.area_name
             </span>
         </div>
         <div class="b-div">
